create two different filters for /login and /api